fix(components): align input elements
closes #441

--- a/src/app/shared/designSystem/variables/_button.scss
+++ b/src/app/shared/designSystem/variables/_button.scss
@@ -1,8 +1,8 @@
 $button-font-family: $font-family;
-$button-padding: $space-2 $space-12;
+$button-padding: $space-8 $space-12;
 $button-margin: 0 $space-8 0 0;
 $button-min-width: $space-32;
-$button-height: $space-32;
+$button-height: auto;
 $button-font-size: $font-size;
 $button-font-weight: 400;
 $button-border-radius: $brand-border-radius;
